--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+                        body {
+                            background: #121926;
+                        }
+                        /*#0c111b*/
+                        
+                        .media-row {
+                            display: flex;
+                            /* overflow-y: hidden; */
+                            /* overflow-x: scroll; */
+                            padding: 2%;
+                            border-radius: 5px;
+                            /* width: 100%; */
+                            /* height: auto; */
+                            /* top: 0; */
+                        }
+                        
+                        .right-arrow {
+                            right: -90px;
+                            width: unset;
+                            z-index: 2;
+                            position: absolute;
+                            top: 0;
+                        }
+                        
+                        .media-row::-webkit-scrollbar {
+                            display: none;
+                        }
+                        
+                        .span {
+                            margin: 25px;
+                            font-weight: 500;
+                            font-size: 20px;
+                            color: #fff;
+                            margin-top: 10px;
+                        }
+                        
+                        .span:hover {
+                            color: #1f80e0;
+                            cursor: pointer;
+                            transition: 0.3 ease-in;
+                        }
+                        /*.App{
+margin: 25px;
+}*/
+                        
+                        .watch {
+                            margin-top: 10px;
+                        }
+                        
+                        .video {
+                            display: flex;
+                            flex-direction: row;
+                            padding: 10px;
+                            padding-top: 22px;
+                        }
+                        
+                        .iframe {
+                            padding: 15px;
+                        }
+                        
+                        .sports {
+                            display: flex;
+                            flex-direction: row;
+                            padding: 10px;
+                            padding-top: 22px;
+                        }
+                        /* @media (max-width:991px) { */
+                        /* .register-photo form { */
+                        /* padding: 40px */
+                        /* } */
+                        
+                        @media (min-width: 768px) {
+                            .watch {
+                                width: 750px;
+                            }
+                        }
+                        
+                        @media only screen and (max-width: 768px),
+                        screen and (orientation: landscape) and (max-width: 1366px) {
+                            .watch .span .media-row {
+                                padding: 0;
+                            }
+                        }
