--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,13 @@
                             display: flex;
                             /* overflow-y: hidden; */
                             /* overflow-x: scroll; */
-                            padding: 2%;
+                            padding: 1%;
                             border-radius: 5px;
-                            /* width: 100%; */
-                            /* height: auto; */
+                            width: 200px;
+                            box-sizing: border-box;
+                            margin-left: -5;
+                            text-align: center;
+                            /* height: 200px; */
                             /* top: 0; */
                         }
                         
