--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -41,19 +41,26 @@
     display: flex;
     flex-direction: row;
     color: rgba(255, 255, 255, 0.8);
+    /* width: 20; */
+    /* height: 20; */
 }
 
 .first {
     display: flex;
     flex-direction: column;
     padding-right: 35px;
-    margin-bottom: 70px;
+    margin-bottom: 60px;
+    /* width: auto; */
 }
 
 .second {
     display: flex;
     flex-direction: column;
     padding-left: 35px;
+    margin-bottom: 5px;
+    background-color: #121926;
+    background-position: 0 0;
+    padding: 1px;
 }
 
 .button {
