--- a/src/components/Head.css
+++ b/src/components/Head.css
@@ -83,8 +83,8 @@
     }
     
     .nav-links img {
-        margin-left: 20px;
-        padding-bottom: 10px;
+        margin-left: 30px;
+        padding-bottom: 20px;
     }
     
     .nav-links li:hover .drop-menu {
@@ -100,9 +100,9 @@
     }
     
     .header-right {
-        padding: 20px 15px 20px;
-        padding-left: 220px;
-        margin-left: 400px;
+        padding: 15px 15px 20px;
+        padding-left: 210px;
+        margin-left: 300px;
     }
     
     .header-right>i {
@@ -114,17 +114,18 @@
     .btn {
         padding-left: 10px;
         padding-right: 10px;
-        color: #fff;
-        font-size: 12px;
+        /* padding-bottom: 10px; */
+        font-size: 15px;
         margin-left: 20px;
         height: 24px;
-        background-color: #1f80e0;
+        background-color: skyblue;
         font-weight: 550;
-        border-radius: 4px;
+        border-radius: 2px;
         outline-width: rgb(204 206 209);
         border: none;
         text-align: center;
         outline-width: 0;
+        padding: 4px;
         cursor: pointer;
     }
     
