--- a/src/components/Media.css
+++ b/src/components/Media.css
@@ -23,8 +23,9 @@
   
   .content-holder {
       position: absolute;
-      top: 5%;
-      right: 19.2%;
+      top: 4%;
+      right: 21.4%;
+      /* left: 19.5; */
       background-color: black;
       width: 40%;
       height: 100%;
@@ -33,7 +34,7 @@
       color: aliceblue;
       /* border-radius: 10px; */
       /* text-align: center; */
-      border-radius: 10px;
+      border-radius: 5px;
       font-size: 30px;
       padding: 3%;
       font-family: Georgia, 'Times New Roman', Times, serif;
