--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,12 +1,25 @@
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #121926;
+    padding-top: 1px;
+    /* padding-left: -200px; */
+    padding-bottom: 1px;
+}
+
+.left {
+    margin-left: -100px;
+}
+
 .left>span {
     font-size: medium;
     font-weight: 400;
     padding: 0 20px 0 0;
     cursor: pointer;
     color: rgba(255, 255, 255, 0.8);
-    padding: 10px;
+    padding: 15px;
     margin-top: 20px;
-    padding-left: 3px;
 }
 
 .left>span:hover {
@@ -15,54 +28,141 @@
     cursor: pointer;
 }
 
-.footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    background-color: #121926;
-    padding-top: 80px;
-}
-
 .left>p {
+    padding-left: 22px;
+    padding-top: 15px;
     color: rgba(255, 255, 255, 0.8);
+    margin-left: -4px;
     font-size: small;
 }
 
-
-/*.right > span {
-    color:rgba(255, 255, 255, 0.8);
-    font-size: medium;
-    font-weight: 400;
-    padding: 70px;
-  
-  }*/
-
 .right {
-    display: flex;
-    flex-direction: row;
     color: rgba(255, 255, 255, 0.8);
-    /* width: 20; */
-    /* height: 20; */
+    margin-right: 30px;
 }
 
 .first {
     display: flex;
-    flex-direction: column;
-    padding-right: 35px;
-    margin-bottom: 60px;
-    /* width: auto; */
+    flex-direction: row;
+}
+
+.first .x {
+    padding-right: 110px;
+}
+
+.first .y {
+    padding-right: 110px;
 }
 
 .second {
+    padding-top: 15px;
     display: flex;
-    flex-direction: column;
-    padding-left: 35px;
-    margin-bottom: 5px;
-    background-color: #121926;
-    background-position: 0 0;
-    padding: 1px;
+    flex-direction: row;
 }
 
-.button {
+.second .one {
+    display: flex;
+    flex-direction: row;
+    padding-right: 125px;
+}
+
+.second .two {
+    display: flex;
+    flex-direction: row;
+}
+
+.btn-a {
     cursor: pointer;
+    background-color: #192133;
+    border: none;
+    padding: 14px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    border-radius: 3px;
+}
+
+.btn-b {
+    cursor: pointer;
+    background-color: #192133;
+    padding: 1px;
+    border: none;
+    border-radius: 3px;
+    padding-bottom: 9px;
+    padding-top: 5px;
+}
+
+.btn-c {
+    cursor: pointer;
+    background-color: #192133;
+    padding: 5px;
+    display: flex;
+    border: none;
+    padding-top: 14px;
+    flex-direction: row;
+    border-radius: 3px;
+}
+
+.btn-d {
+    cursor: pointer;
+    padding: 8px;
+    border: none;
+    padding-top: 10px;
+    background-color: #192133;
+    display: flex;
+    flex-direction: row;
+    border-radius: 3px;
+}
+
+.btn-a:hover {
+    background-color: #1f80e0;
+}
+
+.btn-b:hover {
+    background-color: #1f80e0;
+}
+
+.btn-c:hover {
+    background-color: #1f80e0;
+}
+
+.btn-d:hover {
+    background-color: #1f80e0;
+}
+
+@media only screen and (max-width:650px) {
+    .footer {
+        display: flex;
+        padding-top: 1px;
+        padding-left: 100px;
+        flex-direction: column;
+    }
+    .left>span {
+        font-size: small;
+        font-weight: 400;
+        padding: 0 10px 0 0;
+        padding: 5px;
+        margin-top: 5px;
+    }
+    .right {
+        margin-right: 30px;
+    }
+    .first .x,
+    .y {
+        font-size: small;
+    }
+    .btn-a {
+        padding: 14px;
+        padding-top: 8px;
+        padding-bottom: 7px;
+    }
+    .btn-b {
+        padding: 5px;
+    }
+    .btn-c {
+        padding-top: 1px;
+    }
+    .btn-d {
+        padding: 2px;
+        padding-top: 1px;
+    }
 }
