--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -105,8 +105,9 @@ li {
 }
 
 .header-right {
-    padding: 20px 15px 20px;
+    padding: 20px 1px 20px;
     padding-right: 15px;
+    margin-left: -80px;
 }
 
 .btn {
