--- a/src/components/Media.css
+++ b/src/components/Media.css
@@ -37,7 +37,7 @@
       border-radius: 5px;
       font-size: 30px;
       padding: 3%;
-      font-family: Georgia, 'Times New Roman', Times, serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   
   @media only screen and (max-width: 908px),
